fixed overflow

--- a/projects-files/project-pages/project-pages-css/project-pages.css
+++ b/projects-files/project-pages/project-pages-css/project-pages.css
@@ -1,5 +1,6 @@
 .container {
     padding-bottom: 6%;
+    overflow: hidden;
 }
 
 .line {
@@ -279,3 +280,4 @@ h1 {
         justify-content: start;
     }
 }
+
